--- a/config.env
+++ b/config.env
@@ -1,41 +1,41 @@
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "6081100562:AAFjKwBuvJW50VUCJtj4bZ0_QFHH1GD4VPc"
+GDRIVE_FOLDER_ID = "0AAixcdXELHt0Uk9PVA"
+OWNER_ID = 1463744219
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-DOWNLOAD_STATUS_UPDATE_INTERVAL = 8
-AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
+AUTO_DELETE_MESSAGE_DURATION = -1
+IS_TEAM_DRIVE = "true"
+TELEGRAM_API = 8755370
+TELEGRAM_HASH = "54261233493bbc5bbf489146dd2909dc"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""  # Split by space
-SUDO_USERS = ""  # Split by space
+AUTHORIZED_CHATS = "-811600679"  # Split by space
+SUDO_USERS = "1579501931"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "true"
+INDEX_URL = "False"
 STATUS_LIMIT = ""  # Recommended limit is 4
 # Leech
 TG_SPLIT_SIZE = ""  # leave it empty for max size (2GB)
 AS_DOCUMENT = ""
 UPTOBOX_TOKEN = ""
-MEGA_API_KEY = ""
+MEGA_API_KEY = "sM4hBapQ"
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 BLOCK_MEGA_FOLDER = "" 
 BLOCK_MEGA_LINKS = ""
-STOP_DUPLICATE = ""
-RECURSIVE_SEARCH = ""  # Fill True or False to search in sub-folders or not (only for shared-drive ID or root, you can't use it with folder ID)
+STOP_DUPLICATE = "true"
+RECURSIVE_SEARCH = "True"  # Fill True or False to search in sub-folders or not (only for shared-drive ID or root, you can't use it with folder ID)
 SHORTENER = ""
 SHORTENER_API = ""
 # qBittorrent
 IS_VPS = ""  # Don't set this to True even if you're using VPS, unless facing error with web server
 SERVER_PORT = "80"  # Only For VPS even if IS_VPS is False
-BASE_URL_OF_BOT = ""  # Web Link, Required for Heroku to avoid sleep or use worker if you don't want to use web (selection)
+BASE_URL_OF_BOT = "https://akpowermirror.herokuapp.com"  # Web Link, Required for Heroku to avoid sleep or use worker if you don't want to use web (selection)
 # If you want to use Credentials externally from Index Links, fill these vars with the direct links
 # These are optional, if you don't know about them, simply leave them empty
-ACCOUNTS_ZIP_URL = ""
+ACCOUNTS_ZIP_URL = "https://main.akpowerbot.workers.dev/0:/accounts.zip"
 TOKEN_PICKLE_URL = ""
 MULTI_SEARCH_URL = ""  # You can use gist raw link (remove commit id from the link, like config raw link check Heroku guide)
 # To use limit leave space between number and unit. Available units are (gb or GB, tb or TB)
@@ -45,12 +45,3 @@ CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if its URL ends with ?a=view, if yes make it True it will work (Compatible with Bhadoo Drive Index)
-VIEW_LINK = ""
-# Add more buttons (Three buttons are already added including Drive Link, Index Link, and View Link, you can add extra buttons too, these are optional)
-# If you don't know what are below entries, simply leave them empty
-BUTTON_FOUR_NAME = ""
-BUTTON_FOUR_URL = ""
-BUTTON_FIVE_NAME = ""
-BUTTON_FIVE_URL = ""
-BUTTON_SIX_NAME = ""
-BUTTON_SIX_URL = ""
